--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = tbeam ; Note: the github actions CI test build can't yet build NRF52 targets
+default_envs = twatch ; Note: the github actions CI test build can't yet build NRF52 targets
 
 [common]
 ; common is not currently used
@@ -45,8 +45,11 @@ build_flags = -Wno-missing-field-initializers -Isrc -Isrc/mesh -Isrc/gps -Ilib/n
 ; -DLOG_LOCAL_LEVEL=ESP_LOG_DEBUG -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
 
 ; leave this commented out to avoid breaking Windows
-;upload_port = /dev/ttyUSB0
-;monitor_port = /dev/ttyUSB0
+; upload_port = /dev/ttyACM1
+; monitor_port = /dev/ttyACM1
+
+; upload_port = COM8
+; monitor_port = COM8
 
 ; the default is esptool
 ; upload_protocol = esp-prog
@@ -123,6 +126,20 @@ board = ttgo-lora32-v1
 build_flags = 
   ${esp32_base.build_flags} -D TTGO_LORA_V2
 
+
+[env:twatch]
+extends = esp32_base
+board = ttgo-t-watch
+lib_deps = 
+  1202 ; CRC32, explicitly needed because dependency is missing in the ble ota update lib
+  https://github.com/meshtastic/arduino-fsm.git 
+  https://github.com/meshtastic/SparkFun_Ublox_Arduino_Library.git
+  https://github.com/meshtastic/RadioLib.git
+  TTGO TWatch Library
+build_flags = 
+  ${esp32_base.build_flags} -D TTGO_TWATCH_BASE
+
+
 ; Common settings for NRF52 based targets
 [nrf52_base]
 platform = nordicnrf52
@@ -165,6 +182,5 @@ lib_deps =
   ${env.lib_deps}
   UC1701
   https://github.com/meshtastic/BQ25703A.git
-
 
 
